# docs/swagger.json
@@ -469,6 +469,22 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"ControllerActionResponse": {
+				"properties": {
+					"success": {
+						"type": "boolean"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"success",
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"PriceSegmentDto": {
 				"properties": {
 					"playerType": {
@@ -763,6 +779,17 @@
 					},
 					"role": {
 						"type": "string"
+					},
+					"createdAt": {
+						"anyOf": [
+							{
+								"type": "string",
+								"format": "date-time"
+							},
+							{
+								"type": "string"
+							}
+						]
 					}
 				},
 				"required": [
@@ -1807,6 +1834,68 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/v1/controllers/{id}": {
+			"delete": {
+				"operationId": "DeleteController",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ControllerActionResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Controllers"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/v1/controllers/maintenance/{id}": {
+			"delete": {
+				"operationId": "DeleteMaintenanceRecord",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ControllerActionResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Controllers"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/v1/consoles": {
